Changes in the project

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Konstruct Template</title>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="logo">
+            <img src="img/projeco-logo.png" alt="">
+        </div>
+        <p class="partner">PARTNER WITH KONSTUCT</p>
+        <p class="a">An award-winning construction management firm</p>
+        <p class="s">SCROLL DOWN</p>
+    </header>
+    <nav class="nav">
+        <ul>
+            <li>HOME</li>
+            <li>ABOUT</li>
+            <li>SERVICES</li>
+            <li>WORK</li>
+            <li>CONTACT</li>
+        </ul>
+    </nav>
 </body>
 </html>
