--- a/index.html
+++ b/index.html
@@ -8,25 +8,174 @@
     <link rel="stylesheet" href="style/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="img/projeco-logo.png" alt="">
+            <a href="#">
+                <img src="img/projeco-logo.png" alt="">
+            </a>
         </div>
-        <p class="partner">PARTNER WITH KONSTUCT</p>
+        <h1 class="header-title">PARTNER WITH KONSTUCT</h1>
         <p class="a">An award-winning construction management firm</p>
         <p class="s">SCROLL DOWN</p>
     </header>
-    <nav class="nav">
-        <ul>
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>SERVICES</li>
-            <li>WORK</li>
-            <li>CONTACT</li>
+    <nav class="navigation">
+        <div class="logo">
+            <a href="#">
+                <img src="img/projeco-logo-black.png" alt="">
+            </a>
+        </div>
+        <ul class="nav">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">WORK</a></li>
+            <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
+    <section class="story">
+        <div class="container">
+          <h2 class="story_title_2">Our Story</h2>
+          <div class="story_inner">
+            <div class="story_left">
+              <h3 class="story_title_3">Founded in 2011 by John Mathew Smith, <span class="accent-color">Konstruct</span> has become the number one construction management firm</h3>
+              <p class="story_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+            </div>
+            <div class="story_right">
+              <div class="story_item">We plan</div>
+              <div class="story_item">We manage</div>
+              <div class="story_item">We build</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="services">
+        <div class="container">
+            <div class="services-block-1">
+                <h2 class="services-title">OUR CAPABILITIES</h2>
+                    <p class="services-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+                    <a href="#" class="services-btn-a">
+                        <div class="services-btn">ALL SERVICES</div>
+                    </a>
+            </div>
+            <div class="services-block-2">
+                <div class="service">
+                    <div class="service--fill">
+                        <img src="img/Bitmap.png" alt="" class="service-img">
+                        <h2 class="service--title">PROJECT AND CONSTRUCTION MANAGEMENT</h2>
+                        <p class="service--text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+                    </div>
+                </div>
+                <div class="service">
+                    <div class="service--fill">
+                        <img src="img/Bitmap2.png" alt="" class="service-img">
+                        <h2 class="service--title">STRUCTURE AUDIT AND MAINTENANCE</h2>
+                        <p class="service--text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+                    </div>
+                </div>
+                <div class="service">
+                    <div class="service--fill">
+                        <img src="img/Bitmap3.png" alt="" class="service-img">
+                        <h2 class="service--title">FACTORY CONSTRUCTION AND MODELING</h2>
+                        <p class="service--text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
+      <section class="git">                                             <!-- Class: git - Get In Touch -->
+        <div class="container">
+            <h1 class="git-title">Want to build<br> something amazing?</h1>
+            <div class="git-btn">
+                <a href="#" class="git-btn-a">
+                    <div class="git-btn-text">GET IN TOUCH</div>
+                </a>
+            </div>
+        </div>
+      </section>
+      <section class="newsletter">
+        <div class="container">
+            <div class="newsletter-content">
+                <h2 class="newsletter-title">Newsletter Signup</h2>
+                <form action="index.html">
+                    <input class="newsletter-input" type="email" id="email" name="email" placeholder="test@youremail.com">
+                </form>
+                <a href="#" class="newsletter-btn-a">
+                    <div class="newsletter-btn">SIGNUP</div>
+                </a>
+            </div>
+        </div>
+      </section>
+      <section class="footer-p">
+        <div class="footer-p-container">
+            <div class="content-footer-p"> 
+                <div class="footer-p-item footer-p-item-company">
+                    <ul>
+                        <li>COMPANY</li>
+                        <li><a href="#" class="footer-p-item-company-a-logo"><img src="img/projeco-logo.png" alt="" class="footer-p-logo"></a></li>
+                        <li><p class="footer-p-item-company-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p></li>
+                    </ul>
+                </div>
+                <div class="footer-p-item footer-p-item-nav" style="margin-left: -120px;">
+                    <ul>
+                        <li class="footer-p-item-p">LINKS</li>
+                        <div class="footer-p-item-nav-a-company">
+                            <li><a href="#">HOME</a></li>
+                            <li class="footer-p-a"><a href="#">ABOUT</a></li>
+                            <li class="footer-p-a"><a href="#">SERVICES</a></li>
+                            <li class="footer-p-a"><a href="#">PROJECTS</a></li>
+                            <li class="footer-p-a"><a href="#">CONTACT US</a></li>
+                        </div>
+                    </ul>
+                </div>
+                <div class="footer-p-item footer-p-item-nav" style="margin-left: -120px;">
+                    <ul>
+                        <div class="footer-p-item-nav-a">
+                            <li><a href="#">FAQ</a></li>
+                            <li class="footer-p-a"><a href="#">TERMS</a></li>
+                            <li class="footer-p-a"><a href="#">CAREERS</a></li>
+                        </div>
+                    </ul>
+                </div>
+                <div class=" footer-p-item footer-p-item-nav" style="margin-left: -120px;">
+                    <ul>
+                        <div class="footer-p-item-nav-a">
+                            <li><a href="#">BLOG</a></li>
+                            <li class="footer-p-a"><a href="#">PARTNERS</a></li>
+                            <li class="footer-p-a"><a href="#">NEWS</a></li>
+                        </div>
+                    </ul>
+                </div>
+                <div class="footer-p-item footer-p-item-contact" style="margin-left: -120px;">
+                    <ul>
+                        <h3 class="footer-p-item-h3">CONTACT US</h3>
+                        <p class="footer-p-item-adress">
+                            213 Baker Street
+                            Oriel City Kounty
+                            7000 KNW,
+                            Kountry Name </p>
+                        <p class="footer-p-item-contact-p">+23 994 233 4022</p>
+                        <p class="footer-p-item-contact-p">info@konstruct.com</p>
+                    </ul>
+                </div>
+                <div class="footer-p-item footer-p-item-socials">
+                    <div class="footer-p-item-socials-img" style="margin-left: -120px;">
+                        <div class="footer-p-item-ul">
+                            <img src="img/social1.png" alt="">
+                            <img src="img/social2.png" alt="">
+                            <img src="img/social3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
+      <section class="footer">
+        <div class="container">
+            <p class="footer-copyright">© 2017 Konstruct Inc. Designed by Jane Kathryn Teo</p>
+        </div>
+      </section>
 </body>
 </html>
